--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,1 +1,12 @@
-<p>home-page works!</p>
+<div class="container">
+    <div class="jumbotron jumbotron-fluid mt-3 jmbotron">
+        <div class="container">
+            <h1 class="display-4 d-flex justify-content-center text">MEAN Stack Application</h1>
+            <p class="lead d-flex justify-content-center text">Welcome to the MEAN Stack Application by Ishwari</p>
+            <div class="d-flex justify-content-center">
+                <a class="btn btn-sm mr-2 register" href="#" role="button">Register</a>
+                <a class="btn btn-sm login" href="#" role="button">Login</a>
+            </div>
+        </div>
+    </div>
+</div>
