--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -8,3 +8,25 @@
 .navbar {
   background-color: #00324e !important;
 }
+
+.login{
+  cursor: pointer;
+}
+.register{
+  cursor: pointer;
+}
+.home{
+  cursor: pointer;
+}
+.dashboard{
+  cursor: pointer;
+}
+.profile{
+  cursor: pointer;
+}
+.blog{
+  cursor: pointer;
+}
+.logout{
+  cursor: pointer;
+}
