--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,15 +9,27 @@
             <div class="collapse navbar-collapse d-flex justify-content-between navElement" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-light">Home</a>
+                        <a href="#" class="nav-link text-light home">Home</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link text-light">Login</a>
+                    <li class="nav-item" *ngIf="!success">
+                        <a role="button" (click)="login()" class="nav-link text-light login">Login</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link text-light">Register</a>
+                    <li class="nav-item" *ngIf="!success">
+                        <a role="button" (click)="register()" class="nav-link text-light register">Register</a>
+                    </li>
+                    <li class="nav-item" *ngIf="success">
+                        <a role="button" (click)="dashboard()" class="nav-link text-light dashboard">Dashboard</a>
+                    </li>
+                    <li class="nav-item" *ngIf="success">
+                        <a role="button" (click)="profile()" class="nav-link text-light profile">Profile</a>
+                    </li>
+                    <li class="nav-item" *ngIf="success">
+                        <a role="button" (click)="blog()" class="nav-link text-light blog">Blog</a>
+                    </li>
+                    <li class="nav-item" *ngIf="success">
+                        <a role="button" (click)="logout()" class="nav-link text-light logout">Logout</a>
                     </li>
                 </ul>
             </div>
