guards and services

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,10 +6,10 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-between navElement" id="navbarNav">
+            <div class="collapse navbar-collapse d-flex justify-content-between navElement" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-light home">Home</a>
+                        <a role="button" class="nav-link text-light home">Home<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
