--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,16 +3,16 @@
         <div class="container">
             <a class="navbar-brand navBar mb-0 h1" href="#">MEAN Blog</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-between navElement" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse navElement" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a role="button" class="nav-link text-light home">Home<span class="sr-only">(current)</span></a>
+                        <a role="button" class="nav-link text-light home">Home</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item" *ngIf="!success">
                         <a role="button" (click)="login()" class="nav-link text-light login">Login</a>
                     </li>
