--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,13 @@
 <div class="container">
     <div class="profile">
-        username:Raj
+        <div>
+            username:{{username}}
+        </div>
+        <div>
+            name:{{name}}
+        </div>
+        <div>
+            email:{{email}}
+        </div>
     </div>
 </div>
