--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -8,38 +8,49 @@
         <button type="button" class="btn btn-sm newPost mr-1 py-2" (click)="newPost()">New Post</button>
         <button type="button" class="btn btn-sm reload py-2" (click)="reload()"><i
                 class="pi pi-refresh mr-1"></i>Reload</button>
-        <div class="mt-3" *ngFor="let item of list">
-            <p-panel>
+        <div class="mt-3">
+            <p-panel *ngFor="let item of blog">
                 <p-header>
-                    Blog Post
+                    {{item.title}}
                 </p-header>
                 <div>
-                    Content of the panel can be expanded and collapsed using toggleable option, default state is defined
-                    with collapsed option. By default, toggle icon is used to toggle the contents whereas setting
-                    toggler to
-                    "header" enables clicking anywhere in the header to trigger a toggle.
+                    {{item.body}}
                 </div>
                 <div class="panel mt-2 mb-2">
-                    <div><strong>Posted by:</strong>Ishwari Kanase</div>
-                    <div><strong>Date:</strong>Ishwari Kanase</div>
+                    <div><strong>Posted by :</strong> {{item.createdBy.name}}</div>
+                    <div><strong>Date :</strong> {{item.createdAt | date:'longDate'}}</div>
                     <div class="py-2">
-                        <button type="button" class="btn btn-sm like mr-1" (click)="newPost()"><i class="pi pi-thumbs-up
+                        <button type="button" class="btn btn-sm like mr-1" (click)="like(item._id)"><i class="pi pi-thumbs-up
                             mr-1"></i>
-                            Likes:1</button>
-                        <button type="button" class="btn btn-sm dislike" (click)="reload()"><i class="pi pi-thumbs-down
-                                mr-1"></i>Dislikes:2</button>
+                            Likes : {{item.likes.length}}</button>
+                        <button type="button" class="btn btn-sm dislike" (click)="disLike(item._id)"><i class="pi pi-thumbs-down
+                                mr-1"></i>Dislikes : {{item.dislikes.length}}</button>
                     </div>
                 </div>
                 <div class="comments">
-                    <button type="button" class="btn btn-sm comment mr-1" (click)="newPost()">Post Comment</button>
+                    <button type="button" class="btn btn-sm comment mr-1" (click)="newComment(item._id)">Post
+                        Comment</button>
+                    <form [formGroup]="postCommentForm" (submit)="submit(item._id)">
+                        <div class="mt-2" *ngIf="comment">
+                            <textarea class="form-control" formControlName="comment"></textarea>
+                            <div class="mt-2">
+                                <button type="submit" class="btn btn submit mr-1 btn-sm">Submit
+                                    Post</button>
+                                <button type="button" class="btn btn cancel btn-sm" (click)="cancel()">Cancel</button>
+                            </div>
+                        </div>
+                    </form>
+
                     <div class="mt-2">
-                        <a (click)="show()" role="button" *ngIf="!success">Show Comments<i class="pi pi-comment
-                            mr-1"></i> </a>
-                        <a (click)="show()" role="button" *ngIf="success">Hide Comments<i class="pi pi-comment
-                                mr-1"></i> </a>
+                        <a (click)="show(item._id)" role="button" *ngIf="!success" class="showComments">Show Comments<i
+                                class="pi pi-comments"></i></a>
+                        <a (click)="show(item._id)" role="button" *ngIf="success" class="hideComments">Hide Comments<i
+                                class="pi pi-comments"></i></a>
                         <div *ngIf="success">
-                            <div class="mt-2"><strong>Raj:</strong>great post!!</div>
-                            <div class="mt-2"><strong>Seema:</strong>food post!!</div>
+                            <div class="mt-2" *ngFor="let comment of item.comments">
+                                <strong><a role="button" (click)="profile(item._id)"
+                                        class="profile">{{comment.postedBy.name}} :</a></strong> {{comment.comment}}
+                            </div>
                         </div>
                     </div>
 
