--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -6,6 +6,14 @@
   background-color: #ffbf00 !important;
   color: white !important;
 }
+.cancel {
+  background-color: #ff4500 !important;
+  color: white !important;
+}
+.submit {
+  background-color: #00aeff !important;
+  color: white !important;
+}
 .reload {
   background-color: #a9a9a9 !important;
   color: white !important;
@@ -18,23 +26,35 @@
   background-color: #ffbf00 !important;
   color: white !important;
 }
-.panel{
-  background-color: #F5F5F5 !important;
+.panel {
+  background-color: #f5f5f5 !important;
   margin-left: -14px;
   margin-right: -14px;
   padding-left: 14px;
   padding-right: 14px;
+}
+.comment {
+  background-color: #ff4500 !important;
+  color: white;
+}
+.showComments {
+  cursor: pointer;
+}
+.hideComments {
+  cursor: pointer;
+}
 
-}
-.comment{
-  background-color: #FF4500 !important;
-  color: white; 
-}
-::ng-deep{
-  .ui-panel	{
-    .ui-panel-titlebar{
+::ng-deep {
+  .ui-panel {
+    .ui-panel-titlebar {
       background-color: #00324e !important;
       color: white !important;
     }
+    margin-bottom: 10px !important;
   }
+}
+
+
+.profile{
+  cursor: pointer;
 }
