--- a/src/app/new-post/new-post.component.html
+++ b/src/app/new-post/new-post.component.html
@@ -1,25 +1,29 @@
 <div class="container">
-    <div class="blog py-3">
-        <div>
-            <label for="Blog">
-                <h4>Blog Feed</h4>
-            </label>
-        </div>
-        <div class="mt-3 mb-3">
+    <form [formGroup]="newPostForm" (submit)="submit()">
+        <div class="blog py-3">
             <div>
-                <label for="title">Title</label>
-                <input type="text" class="form-control mb-2">
+                <label for="Blog">
+                    <h4>Blog Feed</h4>
+                </label>
+            </div>
+            <div class="mt-3 mb-3">
+                <div>
+                    <label for="title">Title</label>
+                    <input type="text" class="form-control mb-2" formControlName="title">
+                </div>
+                <div>
+                    <label for="body">Body</label>
+                    <textarea class="form-control" formControlName="body"></textarea>
+                </div>
+
             </div>
             <div>
-                <label for="body">Body</label>
-                <textarea class="form-control"></textarea>
-            </div>
-        </div>
-        <div>
                 <button type="button" class="btn btn back mr-1" (click)="back()">Go Back</button>
-                <button type="button" class="btn btn submit" (click)="submit()">Submit</button>
+                <button type="submit" class="btn btn submit">Submit</button>
 
+
+            </div>
         </div>
+    </form>
 
-    </div>
 </div>
